Bug #28410 ndb: no retry sleep when getting autoincrement
Submitted: 14 May 2007 11:43 Modified: 23 May 2007 17:35
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Tomas Ulin Target Version:

[14 May 2007 11:43] Tomas Ulin
Description:
ha_ndbcluster.cc missing retry sleep for temporary error on getting autoincrement...

found in code inspection

How to repeat:
.
[14 May 2007 11:57] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26581

ChangeSet@1.2484, 2007-05-14 12:15:27+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #28410 ndb: no retry sleep when getting autoincrement
  - add retry sleep to allow temprary error to go away
[23 May 2007 10:24] Bugs System
Pushed into 5.1.19-beta
[23 May 2007 10:24] Bugs System
Pushed into 5.0.44
[23 May 2007 17:35] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.0.44 and 5.1.19 changelogs.