Bug #28410 ndb: no retry sleep when getting autoincrement - add retry sleep to allow temprary error to go away